--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -20,7 +20,7 @@ body:
           required: true
         - label: I have read the [documentation](../docs/)
           required: true
-        - label: I am using the latest version of Accelade Infolists
+        - label: I am using the latest version of Accelade Query Builder
           required: true
 
   - type: textarea
@@ -38,9 +38,9 @@ body:
       label: Steps to Reproduce
       description: Steps to reproduce the behavior
       placeholder: |
-        1. Go to '...'
-        2. Click on '...'
-        3. Scroll down to '...'
+        1. Create a query builder with '...'
+        2. Apply filter '...'
+        3. Call paginate()
         4. See error
     validations:
       required: true
@@ -70,42 +70,35 @@ body:
       description: If applicable, provide a minimal code sample that reproduces the issue
       render: php
       placeholder: |
-        // Your Infolist definition
-        TextEntry::make('name')
-            ->label('Full Name')
-            ->badge();
+        // Your QueryBuilder usage
+        $users = QueryBuilder::for(User::class)
+            ->allowedFilters(['status'])
+            ->allowedSorts(['name', 'created_at'])
+            ->paginate();
 
   - type: dropdown
     id: component
     attributes:
       label: Affected Component
-      description: Which part of Accelade Infolists is affected?
+      description: Which part of Accelade Query Builder is affected?
       multiple: true
       options:
-        - TextEntry Component
-        - BadgeEntry Component
-        - IconEntry Component
-        - ImageEntry Component
-        - ColorEntry Component
-        - RatingEntry Component
-        - ProgressEntry Component
-        - CodeEntry Component
-        - QrCodeEntry Component
-        - KeyValueEntry Component
-        - RepeatableEntry Component
-        - MarkdownEntry Component
-        - HtmlEntry Component
-        - SecretEntry Component
-        - SeparatorEntry Component
-        - Infolist Container
-        - Blade Views
+        - QueryBuilder Core
+        - Search Functionality
+        - Filter System
+        - Sorting System
+        - Pagination
+        - Request Integration
+        - Facade
+        - Service Provider
+        - Configuration
         - Other
 
   - type: input
-    id: infolists-version
+    id: query-builder-version
     attributes:
-      label: Accelade Infolists Version
-      description: What version of Accelade Infolists are you using?
+      label: Accelade Query Builder Version
+      description: What version of Accelade Query Builder are you using?
       placeholder: "1.0.0"
     validations:
       required: true
@@ -133,16 +126,21 @@ body:
     attributes:
       label: Laravel Version
       description: What version of Laravel are you using?
-      placeholder: "11.0.0"
+      placeholder: "12.0.0"
     validations:
       required: true
 
-  - type: input
-    id: browser
+  - type: dropdown
+    id: database
     attributes:
-      label: Browser
-      description: If this is a frontend issue, what browser are you using?
-      placeholder: "Chrome 120, Firefox 121, Safari 17"
+      label: Database Driver
+      description: Which database driver are you using?
+      options:
+        - MySQL/MariaDB
+        - PostgreSQL
+        - SQLite
+        - SQL Server
+        - Other
 
   - type: textarea
     id: logs
@@ -152,13 +150,6 @@ body:
       render: shell
       placeholder: |
         Paste error logs here...
-
-  - type: textarea
-    id: screenshots
-    attributes:
-      label: Screenshots
-      description: If applicable, add screenshots to help explain your problem
-      placeholder: Drag and drop images here...
 
   - type: textarea
     id: additional
